Fixing page headers.

--- a/templates/pages/hybrid.html
+++ b/templates/pages/hybrid.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h2>Django Handlebars Example</h2>
+<h2>Handlebars Templates</h2>
 
 <p>this view delivered by a Handlebars template</p>
 
