Removes robots and updates app template.

--- a/templates/pages/hybrid.html
+++ b/templates/pages/hybrid.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 
-<h2>Handlebars Templates</h2>
+<h2>Hybrid Templates</h2>
 
-<p>this view delivered by a Handlebars template</p>
+<p>We use Handlebars templates to handle displaying views via Ajax. Check this out... <button id="" type="button">Click Me!</button></p>
+
+<div id=""></div>
 
 {% endblock %}
