--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,14 @@
         <meta http-equiv="cleartype" content="on">
         
         <!-- favicon and mobile device icons-->
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}ico/apple-touch-icon-144x144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}ico/apple-touch-icon-114x114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}ico/apple-touch-icon-72x72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ STATIC_URL }}ico/apple-touch-icon-57x57-precomposed.png"> 
-        <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}app_name/ico/apple-touch-icon-144x144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}app_name/ico/apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}app_name/ico/apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ STATIC_URL }}app_name/ico/apple-touch-icon-57x57-precomposed.png"> 
+        <link rel="shortcut icon" href="{{ STATIC_URL }}app_name/ico/favicon.ico" />
         
         <!-- windows8 - tile icon  & color -->
-        <meta name="msapplication-TileImage" content="{{ STATIC_URL }}ico/apple-touch-icon-144x144-precomposed.png">
+        <meta name="msapplication-TileImage" content="{{ STATIC_URL }}app_name/ico/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
         
         <!-- ios webapps - delete if not needed -->
@@ -30,9 +30,9 @@
         -->
         
         <!-- normalize OR bootstrap -->
-        <link rel="stylesheet" href="{{ STATIC_URL }}/css/vendor/normalize-2.1.3.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/vendor/normalize-2.1.3.css">
         <!--
-        <link rel="stylesheet" href="{{ STATIC_URL }}/css/vendor/bootstrap-3.0.0.min.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/vendor/bootstrap-3.0.0.min.css">
         -->
        
         <!-- add google fonts or webfonts if needed -->
@@ -41,15 +41,15 @@
         
         {% compress css %} 
         
-            <!-- if mobile -->
-            <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.less">
+            <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/mobile.less" type="text/less">
             
-            <!-- if desktop -->
-            <link rel="stylesheet" href="{{ STATIC_URL }}css/desktop.less">
-            
+            {% if IS_DESKTOP %}
+            <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/desktop.less" type="text/less">
+            {{% endif %}
+
         {% endcompress %}
         
-        <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="{{ STATIC_URL }}app_name/js/vendor/modernizr-2.6.2.min.js"></script>
         
     </head>
     <body>
@@ -63,7 +63,7 @@
         </ul>
         
         <!-- Add your site or application content here -->
-        <div>
+        <div id="content">
             {% block content %}{% endblock %}
         </div>
         
@@ -71,14 +71,14 @@
         
         <!-- jquery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}app_name/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
                 
         <!-- javascript -->
         {% compress js %}
-            <script src="{{ STATIC_URL }}js/vendor/bootstrap-3.0.0.min.js"></script>
-            <script src="{{ STATIC_URL }}js/vendor/handlebars-1.0.0.min.js"></script>
+            <script src="{{ STATIC_URL }}app_name/js/vendor/bootstrap-3.0.0.min.js"></script>
+            <script src="{{ STATIC_URL }}app_name/js/vendor/handlebars-1.0.0.min.js"></script>
             
-            <script src="{{ STATIC_URL }}js/main.js"></script>
+            <script src="{{ STATIC_URL }}app_name/js/main.js"></script>
             {% block extra_js %}{% endblock %}
         {% endcompress %}
         
