Adds django templatetaghandlebars for compiling handlebars templates.

--- a/static/app_name/css/mobile.less
+++ b/static/app_name/css/mobile.less
@@ -10,3 +10,4 @@ body { padding: 2em; background: yellow;
 }
 
 #content { border: solid 1px #999; padding: 1em; }
+#footer { color: #666; margin-top: 2em; }
