--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,6 @@
         -->
        
         <!-- add google fonts or webfonts if needed -->
-        
         {% load compress %}
         
         {% compress css %} 
@@ -67,7 +66,7 @@
             {% block content %}{% endblock %}
         </div>
         
-        <div>brought to you by ACA</div>
+        <div id="footer">brought to you by ACA</div>
         
         <!-- jquery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
