--- a/templates/pages/hybrid.html
+++ b/templates/pages/hybrid.html
@@ -5,8 +5,10 @@
 
 <h2>Hybrid Templates</h2>
 
-<p>We use Handlebars templates to handle displaying views via Ajax. Check this out... <button id="" type="button">Click Me!</button></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut aliquam libero, vel ultrices nisl. Integer blandit volutpat nisi at hendrerit. Maecenas ornare at ligula quis elementum. Suspendisse feugiat nulla ut elit scelerisque, a commodo risus lobortis. Duis vehicula, lorem eu posuere pulvinar, eros eros luctus felis, nec aliquet mauris purus a libero. Fusce nunc sem, laoreet non dui vel, mattis tincidunt mauris. Proin tincidunt nisi ac felis blandit, sit amet vehicula risus suscipit.</p>
 
-<div id=""></div>
+<p>Load content via Handlebars... <button id="show_hb_content" type="button">Click Me!</button></p>
+
+{% include "handlebars/content.html" %}
 
 {% endblock %}
