Moves mobile desktop indicator message.

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </head>
     <body>
         
-        <h1>ACA Scaffolding</h1>
+        <h1>ACA Scaffolding ({% if IS_DESKTOP %}desktop{% else %}mobile{% endif %})</h1>
                         
         <ul>
             <li><a href="/">home</a></li>
