--- a/static/app_name/css/desktop.less
+++ b/static/app_name/css/desktop.less
@@ -1,11 +1,10 @@
 /*** breakpoints ***/
 @desktop: ~"screen and (min-width: 768px)";
 
-body { background: lime; 
-    
+body {    
     
     @media @desktop {  
-        background: fuchsia;
+        
     }
     
     
