--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,12 @@
         <meta name="apple-mobile-web-app-title" content="">
         -->
         
-        <!-- normalize OR bootstrap -->
-        <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/vendor/normalize-2.1.3.css">
-        <!--
+        <!-- normalize/bootstrap -depending on what you want to start with -->
+        <!--<link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/vendor/normalize-2.1.3.css">-->
         <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/vendor/bootstrap-3.0.0.min.css">
-        -->
        
-        <!-- add google fonts or webfonts if needed -->
+        <!-- add google/web fonts if needed -->
+        
         {% load compress %}
         
         {% compress css %} 
@@ -53,20 +52,44 @@
     </head>
     <body>
         
-        <h1>ACA Scaffolding ({% if IS_DESKTOP %}desktop{% else %}mobile{% endif %})</h1>
-                        
-        <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="/basic">basic</a></li>
-            <li><a href="/hybrid">hybrid</a></li>
-        </ul>
+        <!-- wrap all content here -->
+        <div id="wrap">
         
-        <!-- Add your site or application content here -->
-        <div id="content">
-            {% block content %}{% endblock %}
+            <!-- begin page content -->
+            <div class="container">
+                
+                <div class="page-header">
+                   <h1>Django App Scaffolding</h1>
+                </div>
+                
+                <ul>
+                    <li><a href="/">home</a></li>
+                    <li><a href="/basic">basic</a></li>
+                    <li><a href="/hybrid">hybrid</a></li>
+                </ul>
+                
+                <!-- add your site or application content here -->
+                <div id="content">
+                    {% block content %}{% endblock %}
+                </div>            
+                
+            </div>
+        
+        
+        </div><!-- /wrap -->
+
+        <div id="footer">
+            <div class="container">
+                <p class="text-muted credit">Courtesy of <a href="">Charlon Palacay</a> and <a href="">Craig Stimmel</a>. UW-IT ACA</p>
+                
+                
+            </div>
         </div>
         
-        <div id="footer">brought to you by ACA</div>
+        <div id="device">
+            <!-- example of is_desktop usage in templates -->    
+            <span class="label label-danger">{% if IS_DESKTOP %}Desktop{% else %}Mobile{% endif %}</span>
+        </div>
         
         <!-- jquery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
