--- a/static/app_name/css/desktop.less
+++ b/static/app_name/css/desktop.less
@@ -1,11 +1,19 @@
 /*** breakpoints ***/
+
 @desktop: ~"screen and (min-width: 768px)";
 
-body {    
+/*** less variables ***/
+
+
+
+/*** global ***/
+
+
+/*** content ***/
+
+#content { 
     
-    @media @desktop {  
-        
-    }
-    
+    /* inline media queries */
+    @media @desktop { }
     
 }
