Fixes context processor and moves glyph fonts into css directory.

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         
             <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/mobile.less" type="text/less">
             
-            {% if IS_DESKTOP %}
+            {% if is_desktop %}
             <link rel="stylesheet" href="{{ STATIC_URL }}app_name/css/desktop.less" type="text/less">
             {% endif %}
 
@@ -81,7 +81,7 @@
         <div id="footer">
             <div class="container">
                 <!-- example of is_desktop usage in templates -->    
-                {% if IS_DESKTOP %}
+                {% if is_desktop %}
                 <p class="text-muted credit">Courtesy of <a href="">Charlon Palacay</a> and <a href="">Craig Stimmel</a>. UW-IT ACA</p>
                 {% else %}
                 <p class="text-muted credit">Courtesy of <a href="">Charlon</a> and <a href="">Craig</a>. UW-IT ACA</p>
@@ -91,7 +91,7 @@
         
         <!-- show this in dev mode -->
         <div id="developer">
-            <span class="label label-danger">{% if IS_DESKTOP %}Desktop{% else %}Mobile{% endif %}</span>
+            <span class="label label-danger">{% if is_desktop %}Desktop{% else %}Mobile{% endif %}</span>
         </div>
         
         <!-- jquery -->
