--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% templatetag openblock %} extends 'base.html' {% templatetag closeblock %}
 
-{% block content %}
+{% templatetag openblock %} block content {% templatetag closeblock %}
 
 <h2><span class="glyphicon glyphicon-tree-conifer"></span>Home</h2>
 
@@ -8,4 +8,4 @@
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut aliquam libero, vel ultrices nisl. Integer blandit volutpat nisi at hendrerit. Maecenas ornare at ligula quis elementum. Suspendisse feugiat nulla ut elit scelerisque, a commodo risus lobortis. Duis vehicula, lorem eu posuere pulvinar, eros eros luctus felis, nec aliquet mauris purus a libero. Fusce nunc sem, laoreet non dui vel, mattis tincidunt mauris. Proin tincidunt nisi ac felis blandit, sit amet vehicula risus suscipit.</p>
 
-{% endblock %}
+{% templatetag openblock %} endblock {% templatetag closeblock %}
